# linker

./: CMakeLists.txt  README.md
cctools/: Makefile.am  Makefile.in  configure  configure.ac
cctools/ar/: Makefile.in
cctools/as/: Makefile.am  Makefile.in  as.c
cctools/efitools/: .gitignore  Makefile.in
cctools/include/mach/: machine-cctools.h
cctools/include/mach-o/: arch.h  getsect.h  swap.h
cctools/ld64/: .gitignore  Makefile.in
cctools/ld64/doc/man/: Makefile.am  Makefile.in
cctools/ld64/src/: Makefile.in  configure.h
cctools/ld64/src/3rd/: Makefile.in
cctools/ld64/src/abstraction/: MachOFileAbstraction.hpp
cctools/ld64/src/ld/: HeaderAndLoadCommands.hpp  InputFiles.cpp  LinkEdit.hpp  Makefile.in  Options.cpp  Options.h  OutputFile.cpp  OutputFile.h  Resolver.cpp  Resolver.h  ld.cpp  ld.hpp  libcodedirectory.c  libcodedirectory.h
cctools/ld64/src/ld/code-sign-blobs/: blob.cpp  (+1 more)
cctools/ld64/src/mach_o/: Error.cpp  Makefile.in
cctools/ld64/src/other/: Makefile.am  Makefile.in  ObjectDump.cpp
cctools/libmacho/: Makefile.in  arch.c
cctools/libstuff/: Makefile.in  checkout.c  get_arch_from_host.c  lto.c  ofile.c  writeout.c
cctools/m4/: llvm.m4
cctools/man/: Makefile.in
cctools/misc/: .gitignore  Makefile.in  install_name_tool.c  libtool.c  lipo.c  nm.c  redo_prebinding.c  segedit.c  strip.c  vtool.c
cctools/otool/: .gitignore  Makefile.am  Makefile.in  main.c  ofile_print.c
src/: archive.h  common.h  config.h  linker.cpp  linker.h  macho.cpp  macho.h  macho_structs.h  main.cpp  util.cpp  util.h
tests/: benchmark.py  test_hello.cpp
(+6 files in other folders)
